[package]
name = "ticker"
version = "0.1.0"
authors = ["Archimboldi <1751844336@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0"
actix-rt = "1.1.0"
actix-web-actors = "3.0.0"
async-graphql = "2.0.0"
async-graphql-actix-web = "2.1.1"
slab = "0.4.2"
tokio = { version = "0.3.0", features = ["time", "stream"] }
futures = "0.3.0"
once_cell = "1.0"
sqlx = { version = "0.3.5", features = [ "sqlite" ] }
dotenv = "0.15.0"
thiserror = "1.0.20"
sqlx-core = "0.3.5"
anyhow = "1.0.31"